# culturama-tcc

./: README.md  pyproject.toml
backend/: pyproject.toml  settings.py
backend/core/: settings.py
backend/services/: token_manager.py
backend/src/core/: settings.py  urls.py
backend/src/services/: email_client.py
backend/src/users/: serializers.py  urls.py  views.py
backend/src/users/migrations/: 0001_initial.py
backend/users/: models.py  serializers.py
backend/users/templates/: validate_layout.html
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
